Fix CSS so the HTML output box is accessible on small screens
All page content now scrolls together instead of the left nav having a
static position, which caused screens with small heights from being
able to see overflow content. Verified columns will stack if the screen
width is small.

Definitely more work needed in the CSS area, though.

--- a/css/chartbuilder.css
+++ b/css/chartbuilder.css
@@ -56,7 +56,6 @@ h4 {
 	margin-top: 5px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 3000px;
 	padding: 25px;
 }
 
@@ -66,7 +65,7 @@ h4 {
 
 #interactiveContent #leftColumn {
 	width: 620px;
-	height: 1000px;
+	height: 850px;
 }
 
 #interactiveContent #rightColumn {
@@ -81,7 +80,7 @@ h4 {
 }
 
 #staticStuff {
-	position: fixed;
+	position: absolute;
 	margin-top:10px;
 	margin-left:10px;
 }
